@startuml Diagrama
title Gestor Inteligente de Clientes (GIC) - Diagrama de Clases (UML)

skinparam classAttributeIconSize 0

abstract class Cliente {
  - cliente_id: int
  - nombre: str
  - email: str
  - telefono: str
  - activo: bool

  {abstract} + tipo: str
  {abstract} + calcular_descuento(tarifa_base: int): int

  + calcular_cuota_mensual(tarifa_base: int): int
  + a_dict(): dict
}

class ClienteRegular {
  + calcular_descuento(tarifa_base: int): int
}

class ClientePremium {
  + calcular_descuento(tarifa_base: int): int
}

class ClienteCorporativo {
  - empresa: str
  + calcular_descuento(tarifa_base: int): int
}

Cliente <|-- ClienteRegular
Cliente <|-- ClientePremium
Cliente <|-- ClienteCorporativo

note right of Cliente
  activo (bool):
  - True  -> suscripción vigente
  - False -> cliente inactivo / dado de baja

  tipo:
  - "regular" | "premium" | "corporativo"
end note


class GestorClientes {
  - clientes: List<Cliente>
  - repositorio: ClientesRepositorioJSON

  + cargar_desde_archivo(): void
  + guardar_en_archivo(): void

  + agregar(cliente: Cliente): void
  + listar(solo_activos: bool = false): List<Cliente>
  + buscar_por_id(cliente_id: int): Cliente

  + editar(cliente_id: int,
           nombre: str = None,
           email: str = None,
           telefono: str = None,
           activo: bool = None): void
}


class ClientesRepositorioJSON {
  - ruta_archivo: str

  + cargar(): List<Cliente>
  + guardar(clientes: List<Cliente>): void
}

GestorClientes "1" o-- "0..*" Cliente : administra
GestorClientes "1" -- "1" ClientesRepositorioJSON : usa
ClientesRepositorioJSON ..> Cliente : (de)serializa

@enduml
